# learnopengl

./: .gitignore  CMakeLists.txt  imgui.ini
assets/models/cube/: cube.mtl
assets/shaders/: cube.frag  cube.vert  directional.frag  gouraud.frag  gouraud.vert  object.frag  object.vert  point.frag  shader.frag  spotlight.frag
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Light.cpp  Light.h  Material.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  callbacks.cpp  callbacks.h  events.cpp  events.h  globals.h  main.cpp  utils.cpp  utils.h
